# ETL_Crypto_News_Sentiment

./: .gitignore  README.md  app.py  pyproject.toml
src/: db_utils_helper.py  fetch_news.py  load_news.py  project_config.py  transform_news.py
