[tool.poetry]
name = "etl-crypto-news-sentiment"
version = "0.1.0"
description = "n/a"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
logging = "^0.4.9.6"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.2"
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
